change on the back propagation

--- a/DL_Lab_4.ipynb
+++ b/DL_Lab_4.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 58,
       "metadata": {
         "id": "blA5esJtdFVP"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 59,
       "metadata": {
         "id": "owY9mN1oPAal"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 60,
       "metadata": {
         "id": "6owCQofBP_iL"
       },
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 61,
       "metadata": {
         "id": "nlf-0k4OaffJ"
       },
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 62,
       "metadata": {
         "id": "wF2Lf9ESTOOU"
       },
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "ukJ62SSQQar0"
       },
-      "execution_count": 36,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "gjTXVC7vYHse"
       },
-      "execution_count": 38,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "2WYqHGIRYZdO"
       },
-      "execution_count": 39,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "4AesRTTXYfov"
       },
-      "execution_count": 40,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "6Ufyn_xlYyzu"
       },
-      "execution_count": 41,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "xrWLupEMY66D"
       },
-      "execution_count": 42,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -316,15 +316,23 @@
         "    output_layer.biases[0][0] -= lr * back1\n",
         "    output_layer.biases[0][1] -= lr * back2\n",
         "\n",
-        "    for i in range(4):\n",
-        "        hidden_layer_1.weights[0][i] -= lr * (back1 * output_layer.weights[0][0] * X[0] + back2 * output_layer.weights[0][1] * X[0]) if hidden_layer_1.output[0][i] > 0 else 0\n",
-        "        hidden_layer_1.weights[1][i] -= lr * (back1 * output_layer.weights[1][0] * X[1] + back2 * output_layer.weights[1][1] * X[1]) if hidden_layer_1.output[0][i] > 0 else 0\n",
-        "        hidden_layer_1.biases[0][i] -= lr * (back1 * output_layer.weights[0][0] + back2 * output_layer.weights[0][1]) if hidden_layer_1.output[0][i] > 0 else 0\n"
+        "    for i in range(hidden_layer_1.weights.shape[0]):\n",
+        "        for j in range(hidden_layer_1.weights.shape[1]):\n",
+        "            hidden_layer_1.weights[i][j] -= lr * (\n",
+        "                back1 * output_layer.weights[j][i] * X[i] +\n",
+        "                back2 * output_layer.weights[j][i] * X[i]\n",
+        "            ) if hidden_layer_1.output[0][j] > 0 else 0\n",
+        "\n",
+        "    for j in range(hidden_layer_1.biases.shape[1]):\n",
+        "        hidden_layer_1.biases[0][j] -= lr * (\n",
+        "            back1 * output_layer.weights[j][0] +\n",
+        "            back2 * output_layer.weights[j][1]\n",
+        "        ) if hidden_layer_1.output[0][j] > 0 else 0"
       ],
       "metadata": {
         "id": "5b35O6ItZN-_"
       },
-      "execution_count": 43,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -345,7 +353,7 @@
       "metadata": {
         "id": "L8Q4sOT6Zmpb"
       },
-      "execution_count": 44,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -360,7 +368,7 @@
     {
       "cell_type": "code",
       "source": [
-        "loss = 0.0001\n",
+        "loss = 0.00000001\n",
         "y_pred = forward_pass(X)\n",
         "err = error_calculation(y, y_pred)\n",
         "print(\"Initial loss:\", err)\n",
@@ -378,18 +386,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DvyBc38Zxuf",
-        "outputId": "8a7d3bd4-1c8f-4c37-a335-4d70d5c939b0"
+        "outputId": "f48477a6-d1cf-4669-a187-69f444564391"
       },
-      "execution_count": 45,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Initial loss: tensor(0.2212)\n",
-            "Initial prediction: tensor([[0.0090, 0.0102]])\n",
-            "Final loss: tensor(9.9984e-05)\n",
-            "Final prediction: tensor([[0.0636, 0.9354]])\n",
+            "Initial loss: tensor(0.2229)\n",
+            "Initial prediction: tensor([[0.0097, 0.0066]])\n",
+            "Final loss: tensor(9.9991e-09)\n",
+            "Final prediction: tensor([[0.0501, 0.9499]])\n",
             "Target value: tensor([0.0500, 0.9500])\n"
           ]
         }
