change on the activation function

--- a/DL_Lab_4.ipynb
+++ b/DL_Lab_4.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 73,
       "metadata": {
         "id": "blA5esJtdFVP"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 74,
       "metadata": {
         "id": "owY9mN1oPAal"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 75,
       "metadata": {
         "id": "6owCQofBP_iL"
       },
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 76,
       "metadata": {
         "id": "nlf-0k4OaffJ"
       },
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 78,
       "metadata": {
         "id": "wF2Lf9ESTOOU"
       },
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "ukJ62SSQQar0"
       },
-      "execution_count": 63,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BrPRRf4IXz4F",
-        "outputId": "c91a04f9-af6b-41bf-9525-316064b4bdec"
+        "outputId": "44182c55-7aea-421b-b695-37bc976d5348"
       },
-      "execution_count": 37,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "gjTXVC7vYHse"
       },
-      "execution_count": 64,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "2WYqHGIRYZdO"
       },
-      "execution_count": 65,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "4AesRTTXYfov"
       },
-      "execution_count": 66,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "6Ufyn_xlYyzu"
       },
-      "execution_count": 67,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "xrWLupEMY66D"
       },
-      "execution_count": 68,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -315,24 +315,22 @@
         "    output_layer.weights[1][1] -= lr * back2 * activation1.output[0][1]\n",
         "    output_layer.biases[0][0] -= lr * back1\n",
         "    output_layer.biases[0][1] -= lr * back2\n",
-        "\n",
         "    for i in range(hidden_layer_1.weights.shape[0]):\n",
-        "        for j in range(hidden_layer_1.weights.shape[1]):\n",
-        "            hidden_layer_1.weights[i][j] -= lr * (\n",
-        "                back1 * output_layer.weights[j][i] * X[i] +\n",
-        "                back2 * output_layer.weights[j][i] * X[i]\n",
-        "            ) if hidden_layer_1.output[0][j] > 0 else 0\n",
-        "\n",
+        "      for j in range(hidden_layer_1.weights.shape[1]):\n",
+        "        hidden_layer_1.weights[i][j] -= lr * (\n",
+        "            back1 * output_layer.weights[j][i] * X[i] +\n",
+        "            back2 * output_layer.weights[j][i] * X[i]\n",
+        "        ) * hidden_layer_1.output[0][j] * (1 - hidden_layer_1.output[0][j])\n",
         "    for j in range(hidden_layer_1.biases.shape[1]):\n",
-        "        hidden_layer_1.biases[0][j] -= lr * (\n",
-        "            back1 * output_layer.weights[j][0] +\n",
-        "            back2 * output_layer.weights[j][1]\n",
-        "        ) if hidden_layer_1.output[0][j] > 0 else 0"
+        "      hidden_layer_1.biases[0][j] -= lr * (\n",
+        "        back1 * output_layer.weights[j][0] +\n",
+        "        back2 * output_layer.weights[j][1]\n",
+        "    ) * hidden_layer_1.output[0][j] * (1 - hidden_layer_1.output[0][j])"
       ],
       "metadata": {
         "id": "5b35O6ItZN-_"
       },
-      "execution_count": 69,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -353,7 +351,7 @@
       "metadata": {
         "id": "L8Q4sOT6Zmpb"
       },
-      "execution_count": 70,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -386,17 +384,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DvyBc38Zxuf",
-        "outputId": "f48477a6-d1cf-4669-a187-69f444564391"
+        "outputId": "7265869e-7b16-4f08-9d2a-8a15ad36c20a"
       },
-      "execution_count": 71,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Initial loss: tensor(0.2229)\n",
-            "Initial prediction: tensor([[0.0097, 0.0066]])\n",
-            "Final loss: tensor(9.9991e-09)\n",
+            "Initial loss: tensor(0.2220)\n",
+            "Initial prediction: tensor([[0.0134, 0.0083]])\n",
+            "Final loss: tensor(9.9941e-09)\n",
             "Final prediction: tensor([[0.0501, 0.9499]])\n",
             "Target value: tensor([0.0500, 0.9500])\n"
           ]
